 - fix 'Units with height advantage are unable to force fire with that range' (3303)
 - fix air transports have trouble loading multiple units if units are large (3307)
 - fix partly reclaiming factory allows unit teleportation/remote destruction (3308)
 - fix 'SetFeaturePosition snapToGround get reset when there is terraform nearby' (3243)

Bugfixes:
 - fix network connection is not properly closed when an error occurs in pregame (3166)
 - extend desync message (send in debugmode for specs too and send correct & got checksum)
 - fix "Transport endpoint is not connected"
 - fix secret exploit
 - fix secret exploit #2

Cmdline Arguments:
 - new --game (-g) & --map (-m)
   - if both parameters are set, this starts spring a with minimal setup and it sets the modoption minimalsetup = 1
   - supports fuzzy search e.g. `spring -g ba -m Delta` or `spring -g zk -m "Delta X"`
 - renamed shortarg -m (--minimised) to -b (~background)
 - new `spring --list-def-tags`, will in future return all Unit-, Weapon-, FeatureDefs in a `--list-config-vars` manner (not finished yet)
 - new benchmark mode (`--benchmark %time_min --benchmarkstart %starttime_min`) writes a benchmark.data parsable by gnuplot

OS:
 - set affinity of omp threads
 - search script.txt & demofiles in $PWD
 - detect Valgrind and disable Watchdog & syncing (it won't let us change the FPU state) if it is running
 - don't install crash handler when core dumps are enabled

Buildprocess:
 - boost 1.50 compatibility
 - detect ld.gold and compress debugsymbols
 - update 7z to v9.22
 - use tcmalloc when found (new USE_TCMALLOC use-flag)

Windows:
 - OpenMP build
 - update to boost 1.50
 - slightly improve speed of zip / sdz archives (#3338)
 - Nvidia Optimus support

Linux:
 - Linux's ctrl+c: `hardkill` after 10sec (and 5 seconds softkill)


-- 91.0 ---------------------------------------------------------
Bugfixes:
 - fix Linux sync errors
 - fix QTPFS deadlocks

